# massantagonist

frontend/: index.html  pacman.html  pacman.js
frontend/src/: pacman.ts
mass-antagonist/: mass-antagonist.cabal  readme.md  stack.yaml
