name:                mass-antagonist
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mrwonko/massantagonist
license:             MIT
--license-file:        LICENSE
author:              Willi Schinmeyer
maintainer:          willi@schinmeyer.de
copyright:           2017 Willi Schinmeyer
category:            Web
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

executable mass-antagonist
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , mass-antagonist -- the library defined above
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mrwonko/massantagonist